Added Terms and Privacy information

--- a/globalrouting/index.html
+++ b/globalrouting/index.html
@@ -224,11 +224,18 @@
                 </button>
             </div>
 
-            <div class="mt-6 flex justify-center">
-                <a href="https://linkpro.cz/tKzNvPQ" class="text-blue-600 hover:text-blue-800 font-semibold underline">
-                    Visit Profile
-                </a>
+            <div class="mt-6 text-center">
+            <a href="https://linkpro.cz/tKzNvPQ" class="text-blue-600 hover:text-blue-800 font-semibold underline">
+                Visit Profile
+            </a>
+            <p style="font-size: 0.9rem; color: #666; margin-top: 1.5rem;">
+                Use of this demo is subject to the site’s
+                <a href="https://jcza2ai.github.io/JCZA/terms-and-privacy.html" style="color: #1a73e8; text-decoration: none;">
+                Terms &amp; Privacy Notice
+                </a>.
+            </p>
             </div>
+
         </div>
     </div>
 
