--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 
   <footer>
     &copy; <span id="year"></span> JCZA. All rights reserved.
+    <a href="https://jcza2ai.github.io/JCZA/terms-and-privacy.html">Terms & Privacy</a>
   </footer>
 
   <script>
