Fixed Username in URL

--- a/terms-and-privacy.html
+++ b/terms-and-privacy.html
@@ -92,7 +92,7 @@
   Use of this Site implies acceptance of these terms.</p>
 
   <h2>8. Contact</h2>
-  <p>If you have questions about these terms or this Site, you may contact me through my <a href="https://github.com/yourusername" target="_blank">GitHub profile</a>.</p>
+  <p>If you have questions about these terms or this Site, you may contact me through my <a href="https://github.com/JCZA2AI/" target="_blank">GitHub profile</a>.</p>
 
   <h2>9. Updates</h2>
   <p>These Terms and Privacy details may be updated periodically.
